--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <meta charset="utf-8">
 <meta lang="en">
 <head>
-<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 <title>Orientation to web development</title> 
 </head>
 <body>
